Fixed bugs in mixing and panning logic

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_C=this.value">
     <br/><br/>
     <label>bass</label>
-    <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_D=this.value" />
+    <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_D=this.value">
     <br/><br/>
     <label>guitar</label>
-    <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_E=this.value" />
+    <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_E=this.value">
     <br/><br/>
     <label>vocals</label>
-    <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_F=this.value" />
+    <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_F=this.value">
     <br><br>
     <div class="h1">volume</div>
     <br>
