Added own tracks

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
 
     <div class="h1">channel pan</div>
     <br>
-    <label>drums</label>
+    <label>Rhythm clean</label>
     <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_C=this.value">
     <br/><br/>
-    <label>bass</label>
+    <label>Rhythm dirty</label>
     <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_D=this.value">
     <br/><br/>
-    <label>guitar</label>
+    <label>Harmony clean</label>
     <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_E=this.value">
     <br/><br/>
-    <label>vocals</label>
+    <label>Harmony dirty</label>
     <input type="range" value="0" min="-1" max="1" step="0.01" data-waxml-input-set="panValue_F=this.value">
     <br><br>
     <div class="h1">volume</div>
     <br>
     <div class="pad" id="pad">
-      <div class="label left">drums</div>
-      <div class="label right">bass</div>
-      <div class="label top">guitar</div>
-      <div class="label bottom">vocals</div>
+      <div class="label left">Rhythm clean</div>
+      <div class="label right">Rhythm dirty</div>
+      <div class="label top">Harmony clean</div>
+      <div class="label bottom">Harmony dirty</div>
 
       <div class="knob" id="knob"></div>
     </div>
