--- a/interactive soundscape/index.html
+++ b/interactive soundscape/index.html
@@ -15,12 +15,18 @@
 
       <h2>Trigg separate audio objects</h2>
       <p>With HTML-attribute:</p>
-      <button data-waxml-click-start="bird1">Bird 1</button>
-      <textarea><button data-waxml-click-start="bird1">Bird 1</button></textarea>
+      <button data-waxml-click-start="frenchpeople">Bird 1</button>
+      <textarea><button data-waxml-click-start="frenchpeople">Bird 1</button></textarea>
 
       <p>With javascript:</p>
-      <button onclick="waxml.start('bird2');">Bird 2</button>
-      <textarea><button onclick="waxml.start('bird2');">Bird 2</button></textarea>
+      <button onclick="waxml.start('shooting');">Bird 2</button>
+      <textarea><button onclick="waxml.start('shooting');">Bird 2</button></textarea>
+
+      <button onclick="waxml.start('shootout');">Bird 2</button>
+      <textarea><button onclick="waxml.start('shootout');">Bird 2</button></textarea>
+
+      <button onclick="waxml.start('outro');">Bird 2</button>
+      <textarea><button onclick="waxml.start('outro');">Bird 2</button></textarea>
 
 
       <script src="script/WebAudioXML.js" data-source="audio.xml"></script>
